项目初始化-引入Vant组件库

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,7 @@
 // 全局样式文件
-body {
-    background-color: pink;
-}
+// body {
+//     background-color: pink;
+// }
+
+// 加载字体图标样式
+@import './font_icon/iconfont.css';
