--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,3 +2,9 @@
 body {
   background-color: #f5f7f9;
 }
+.page-nav-bar {
+  background-color: #3296fa;
+}
+.page-nav-bar .van-icon {
+  color: #fff;
+}
