--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -9,5 +9,10 @@
 body {
     background-color: #f5f7f9;
 }
-
+.page-nav-bar {
+    background-color: #3296fa;
+    .van-icon {
+      color: #fff;
+    }
+  }
 
